# span-calendar

./: README.md
Reiden-hub/: Cargo.toml  Dioxus.toml  README.md
Reiden-hub-serv/: Cargo.toml
Reiden-hub-serv/src/: main.rs  spans.db3  users.db3
Reiden-hub/assets/: main.css
Reiden-hub/src/: logic.rs  main.rs  span.rs  time.rs
Reiden-hub/src/model/: model.rs
data/: spans.db  spans.db-journal
